Update 3. Data Structures.md

--- a/3. Data Structures.md
+++ b/3. Data Structures.md
@@ -6,7 +6,7 @@ slides: https://blackboard.aber.ac.uk/ultra/courses/_46446_1/outline/edit/docume
 notesCompleted: true
 module: CS24520
 ---
-![Model](https://github.com/suicidaltissue/suicidaltissue.github.io/blob/main/images/20240301201638.png)
+![Model](https://github.com/suicidaltissue/suicidaltissue.github.io/blob/main/images/Pasted%20image%2020240301201638.png)
 
 
 # Lists
