Update 4. Data Structures 2.md

--- a/4. Data Structures 2.md
+++ b/4. Data Structures 2.md
@@ -6,7 +6,7 @@ slides: https://blackboard.aber.ac.uk/ultra/courses/_46446_1/outline/edit/docume
 notesCompleted: true
 module:
 ---
-![[Pasted image images/20240306091426.png]]
+![Model](https://github.com/suicidaltissue/suicidaltissue.github.io/blob/main/images/Pasted%20image%2020240306091426.png)
 
 # Sets
 A set is like a list but contains no duplicates, they are defined by using `{}`
