Update 4. Data Structures 2.md

--- a/4. Data Structures 2.md
+++ b/4. Data Structures 2.md
@@ -74,7 +74,7 @@ symdiff = a ^ b
 ```
 
 ## Use Cases
-![[Pasted image 20240306090000.png]]
+![Model](https://github.com/suicidaltissue/suicidaltissue.github.io/blob/main/images/Pasted%20image%2020240306090000.png)
 
 # Dictionaries
 A dictionary is a data structure where you can store mappings between keys and values.
@@ -119,10 +119,10 @@ phonebook.items() # Returns 999
 ```
 
 ## Types Of Keys
-![[Pasted image 20240306090106.png]]
+![Model](https://github.com/suicidaltissue/suicidaltissue.github.io/blob/main/images/Pasted%20image%2020240306090106.png)
 
 ## Iteration
-![[Pasted image 20240306090349.png]]
+![Model](https://github.com/suicidaltissue/suicidaltissue.github.io/blob/main/images/Pasted%20image%2020240306090349.png)
 
 # Comprehension
 Comprehension allows you to generate a list that would normally be generated with the use of a loop with one line of code.
@@ -181,7 +181,7 @@ student_dict = { k : v for k,v in zip(names, marks) }
 
 # Construction from iterable objects
 
-![[Pasted image 20240211112747.png]]
+![Model](https://github.com/suicidaltissue/suicidaltissue.github.io/blob/main/images/Pasted%20image%2020240211112747.png)
 
 # Data Structure Conversions
 
