--- a/5. Functions.md
+++ b/5. Functions.md
@@ -87,7 +87,7 @@ checktext("hello", isLong)
 ```
 
 ### Default Values
-![[Pasted image 20240306093832.png]]
+![Model](https://github.com/suicidaltissue/suicidaltissue.github.io/blob/main/images/Pasted%20image%2020240306093832.png)
 
 ## Return Values
 Functions are able to return a value which can be used by the code calling that function, for example you may want to have a function which doubles a number and then returns the value, this can be done like so
@@ -116,8 +116,8 @@ def example():
 
 ## Function Types
 
-![[Pasted image 20240301112118.png]]
-![[Pasted image 20240301112131.png]]
+![Model](https://github.com/suicidaltissue/suicidaltissue.github.io/blob/main/images/Pasted%20image%2020240301112118.png)
+![Model](https://github.com/suicidaltissue/suicidaltissue.github.io/blob/main/images/Pasted%20image%2020240301112131.png)
 
 
 #lecturenote
