--- a/8. NumPy.md
+++ b/8. NumPy.md
@@ -7,7 +7,7 @@ notesCompleted: true
 module: CS24520
 ---
 # Scientific Python Ecosystem
-![[Pasted image 20240215024949.png]]
+![Model](https://github.com/suicidaltissue/suicidaltissue.github.io/blob/main/images/Pasted%20image%2020240215024949.png)
 # NumPy
 Short for Numerical Python, allows powerful fast vectorised operations on arrays of numbers. even though pythons lists can be used to implement arrays, they are slow to process NumPy uses pre-compiled code to provide a fast way to work with multidimensional arrays.
 
@@ -27,9 +27,9 @@ When working with an array in numpy, you need to consider the following points
 - the sequence of axis (dimension) sizes the shape
 
 ### How they are stored Arrays
-![[Pasted image 20240215030701.png]]
+![Model](https://github.com/suicidaltissue/suicidaltissue.github.io/blob/main/images/Pasted%20image%2020240215030701.png)
 NumPy arrays are actually stored as a linear block in memory, NumPy just knows where each row/dimension begins in that linear space.
-![[Pasted image 20240215030710.png]]
+![Model](https://github.com/suicidaltissue/suicidaltissue.github.io/blob/main/images/Pasted%20image%2020240215030710.png)
 
 ### Creating a NumPy array
 
@@ -136,7 +136,7 @@ x[1:5:2] # Starting at index one, up to index 5 in increments of 2
 ### 2D Arrays
 We can slice a 2D array using one index `[row]` or two indices `[row , col]`
 
-![[Pasted image 20240301213246.png]]
+![Model](https://github.com/suicidaltissue/suicidaltissue.github.io/blob/main/images/Pasted%20image%2020240301213246.png)
 
 ## Filtering Data
 
